--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,7 @@ nav a {
   text-decoration: none;
   margin-top: 10px;
   display: inline-block;
-  background-color: black;
+  background-color: #EEE;
   color: #3d3d3d;
   border-radius: 4px;
 }
